tests/NormalTests/paczka2/big_fuzzy/96598321.err
Error in line 26: S140 S463 13,94
Error in line 13: S140 A351 65,4
Error in line 31: hPoHCMuj A351 67,4
Error in line 33: YClLQ S463 63,8
Error in line 27: S140 S463 26,9
Error in line 50: C80PTghUG S221 36,1
Error in line 63: tdceK S140 4,2
Error in line 59: S140 A351 11,2
Error in line 69: S140 S140 87,2
Error in line 70: S140 S463 2,4
Error in line 74: 4XtVeG57iT A351 4,9
Error in line 82: S140 S140 25,7
Error in line 86: m9T3sVbn S221 84,8
Error in line 93: YClLQ S221 85,5
Error in line 97: C80PTghUG S463 99,0
Error in line 108: hPoHCMuj S221 242,0
Error in line 116: m9T3sVbn A351 -1,7
Error in line 115: hPoHCMuj A351 39,1
Error in line 114: 4XtVeG57iT A351 18,1
Error in line 147: S140 S221 56,26
Error in line 148: tdceK A351 60,1
Error in line 154: S140 S221 24,3
Error in line 179: 4XtVeG57iT A351 87,5
Error in line 187: S140 S221 197,4
Error in line 186: YClLQ S221 86,8
Error in line 191: YClLQ S463 2,1
Error in line 194: tdceK S463 65,74
Error in line 193: hPoHCMuj A351 76,6
Error in line 206: tdceK A351 72,2
Error in line 210: tdceK S463 58,9
Error in line 217: hPoHCMuj S221 246,9
Error in line 184: m9T3sVbn S221 79,1
Error in line 226: YClLQ S463 52,6
Error in line 218: C80PTghUG A351 56,6
Error in line 232: hPoHCMuj S463 2,3
Error in line 239: C80PTghUG S140 5,7
Error in line 237: S140 S140 48,0
